--- a/package.json
+++ b/package.json
@@ -30,8 +30,8 @@
   },
   "dependencies": {
     "copy-to": "~1.0.1",
-    "error-formater": "~1.0.3",
-    "iconv-lite": "~0.4.3",
+    "error-formatter": "~1.0.3",
+    "iconv-lite": "~0.4.4",
     "logfilestream": "~0.1.3",
     "ms": "~0.6.2"
   },
