--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,9 @@
+sudo: false
 language: node_js
 node_js:
+  - "6"
+  - "4"
+  - "0.12"
   - "0.10"
-  - "0.11"
 script: "make test-travis"
 after_script: "npm install coveralls@2.10.0 && cat ./coverage/lcov.info | coveralls"
