--- a/package.json
+++ b/package.json
@@ -20,22 +20,21 @@
   "author": "dead_horse <dead_horse@qq.com>",
   "license": "MIT",
   "devDependencies": {
-    "autod": "^0.2.2",
     "istanbul": "^0.3.0",
-    "mkdirp": "~0.5.0",
-    "mm": "~0.2.1",
-    "mocha": "^1.20.1",
-    "rimraf": "~2.2.8",
-    "should": "~4.0.4"
+    "mkdirp": "^0.5.0",
+    "mm": "^0.2.1",
+    "mocha": "2",
+    "rimraf": "2",
+    "should": "4"
   },
   "dependencies": {
-    "utility": "~1.6.0",
-    "copy-to": "~1.0.1",
-    "error-formatter": "~1.0.3",
+    "utility": "^1.8.0",
+    "copy-to": "^1.0.1",
+    "error-formatter": "^1.0.3",
     "iconv-lite": "~0.4.4",
-    "logfilestream": "~1.0.1",
-    "ms": "~0.6.2",
-    "sdk-base": "~1.0.0"
+    "logfilestream": "^1.0.1",
+    "ms": "^0.7.1",
+    "sdk-base": "^1.0.0"
   },
   "files": [
     "index.js"
